# Adaboost_Tracking

./: CMakeLists.txt  README.md
nemo/: .history
src/: .cproject  .history  AdaBoost.cpp  AdaBoost.cpp~  AdaBoost.h  AdaBoost.h~  Makefile~  WeakClassifier.cpp  WeakClassifier.cpp~  WeakClassifier.h  WeakClassifier.h~  nemo_tracking.cpp  nemo_tracking.cpp~
